feat: add hero section

--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -13,6 +13,37 @@
     <title>Sasha Balandina: Frontend developer</title>
 </head>
 <body>
-    <h1>Frontend developer</h1>
+    <div class="hero">
+        <nav class="hero-nav">
+            <p class="hero-logo">Sasha Balandina</p>
+            <ul class="hero-list">
+                <li class="list-item active"><a href="#" class="item-link">Home</a></li>
+                <li class="list-item"><a href="#" class="item-link">About</a></li>
+                <li class="list-item"><a href="#" class="item-link">Work</a></li>  
+                <li class="list-item"><a href="#" class="item-link">Contacts</a></li>             
+            </ul>
+        </nav>
+        <div class="hero-content">
+            <h3 class="hero-greeting">👋🏻 Hi, I am</h3>
+            <h1 class="hero-name">Sasha Balandina</h1>
+            <p class="hero-position">UI/UX Designer | Frontend Developer</p>
+            <button class="main-button">Get in Touch</button>
+        </div>
+        <div>
+            <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+            <defs>
+            <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+            </defs>
+            <g class="parallax">
+            <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(172,242,209,0.7)" />
+            <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(72,242,209,0.5)" />
+            <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+            <use xlink:href="#gentle-wave" x="48" y="7" fill="#ACF2D1" />
+            </g>
+            </svg>
+        </div>
+    </div>
+    
 </body>
 </html>
